# cogmait-backend

./: .gitignore  lab1_report.docx  pyproject.toml  requirements.txt
tests/utils/: test_config.py
