[project]
name = "source-code-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "JinPeng",email = "422562636@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn[standard] (>=0.44.0,<0.45.0)",
    "pydantic (>=2.10.0,<2.11.0)",
    "python-multipart (>=0.0.26,<0.0.27)",
    "starlette (>=1.0.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "cachetools (>=7.0.5,<8.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "mysql-connector-python (>=9.6.0,<10.0.0)",
    "pandas (<3.0.0)",
    "modelscope (>=1.35.4,<2.0.0)",
    "anthropic (>=0.94.1,<0.95.0)",
    "magic-pdf (>=1.3.12,<2.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "sentence-transformers (>=5.4.0,<6.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "langchain (>=1.2.15,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)",
    "pymilvus (>=2.6.12,<3.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pypdf (>=6.10.0,<7.0.0)",
    "neo4j (>=6.1.0,<7.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "tavily-python (>=0.7.23,<0.8.0)",
    "google-genai (>=1.73.0,<2.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "neo4j-graphrag (>=1.14.1,<2.0.0)",
    "sse-starlette (>=3.3.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
